--- a/app/templates/tools/domains/whois.html
+++ b/app/templates/tools/domains/whois.html
@@ -63,25 +63,25 @@
     </div>
 
     <div class="row mb-3">
-        <form method="POST">
-        {{ form.hidden_tag() }}
-            <div class="col-md-3">
-                    <div class="form-group">
-                        {{ form.domain.label }}
-                        {{ form.domain(class="form-control") }}
-                        {% for error in form.domain.errors %}
-                        <small class="form-text text-danger">{{ error }}</small>
-                        {% endfor %}
-                    </div>
-                    <!-- <button type="submit" class="btn btn-primary"></button> -->
+        <form method="POST" class="w-100 d-flex">
+            {{ form.hidden_tag() }}
+            <div class="col-md-9">
+                <div class="form-group">
+                    {{ form.domain.label }}
+                    {{ form.domain(class="form-control") }}
+                    {% for error in form.domain.errors %}
+                    <small class="form-text text-danger">{{ error }}</small>
+                    {% endfor %}
+                </div>
             </div>
-            <div class="col-md-3"></div>
-            <div class="col-md-3"></div>
             <div class="col-md-3 d-flex align-items-end">
                 <button type="submit" class="btn btn-primary w-100">Enviar</button>
             </div>
         </form>
+        <div class="col-md-3">test</div>
+        <div class="col-md-3">test</div>
     </div>
+    
 
     <hr>
     {% if results %}
@@ -195,7 +195,7 @@
             <p>No se encontraron resultados válidos.</p>
         {% endif %}
 
-        <h4 class="mb-3">FandangoSEO's Data</h4>
+        <h4 class="mb-3">SEO's Data</h4>
         <div class="row mb-4">
             <div class="col-md-3">
                 <div class="card border-info">
